syntax = "proto3";
package hello;
option go_package = ".;helloworld";  // Go 中：默认使用package名作为包名，除非指定了option go_package选项 (protoc-gen-go的未来版本将要求指定此内容)

message HelloResp {
  string Body = 2;
}

message HelloReq {
  string Name = 1;
}

service HelloWorld {
  rpc Hello(HelloReq) returns (HelloResp);
}

// proto --go_out=plugins=grpc:. *.proto
// protoc --twirp_out=. --go_out=. *.proto